# VM2

./: Anleitung URE.odt  Anleitung URE_updated.odt  README.md  chomp_planning.yaml  constraints.odt  hybrid_planning_demo_node.cpp  joint_limits.yaml
benchmarks/: benchmark.db  benchmark_clearspace_allPlanners.db  benchmark_omplPlanners.db  benchmark_ompl_chomp_stomp.db  benchmark_stomp_chomp_prePostprocessing.db
benchmarks/convert-db-to-csv/ClearSpace_CSV/: bestPlannerConfigs.csv  bestPlannerConfigsPerExperiment.csv  experiments.csv  runs.csv
benchmarks/convert-db-to-csv/RealSpace_cylinders/: bestPlannerConfigs.csv  bestPlannerConfigsPerExperiment.csv  runs.csv
benchmarks/convert-db-to-csv/constraint/: bestPlannerConfigs.csv  bestPlannerConfigsPerExperiment.csv  plannerConfigs.csv  runs.csv
hello_moveit/: package.xml
hello_moveit/src/: hello_moveit.cpp
moving_ur3/: CMakeLists.txt  package.xml
moving_ur3/collisionObjects/: desk.STL  lights.stl  testSTL.dae  testSTL.stl
moving_ur3/config/: ur3_rviz_config.rviz
moving_ur3/launch/: motion_planning_pipeline_ur3e.launch  run.launch  run_real.launch
moving_ur3/src/: addRealisticEnvironment.cpp  addRealisticEnvironment_cylinders.cpp  addRealisticEnvironment_cylinders_constraint.cpp  motion_planning_pipeline_ur3e.cpp  moving_ur3.cpp  realistic_environment.cpp  realistic_environment_cylinders.cpp
moving_ur3e_ros2/: CMakeLists.txt  package.xml
moving_ur3e_ros2/config/: common_hybrid_planning_params.yaml  global_planner.yaml  local_planner.yaml  my_rviz_config.rviz
moving_ur3e_ros2/launch/: bringup_sim.launch.py  hybrid_planning_ur3e.launch.py  motion_planning_pipeline_ur3e.launch.py  move_ur3e.launch.py  move_ur3e_box.launch.py  move_ur3e_box_constrained.launch.py  move_ur3e_box_constrained_curvedTube.launch.py  move_ur3e_box_constrained_cylinder.launch.py  move_ur3e_box_constrained_plane.launch.py  move_ur3e_box_constrained_realEnvironment.launch.py  move_ur3e_box_constrained_stl.launch.py  move_ur3e_box_constrained_tube.launch.py  move_ur3e_joint_goal.launch.py  move_ur3e_realEnvironment.launch.py  start_hybrid_planning_ur3e.launch.py  start_moveit_rviz.launch.py
moving_ur3e_ros2/src/: hybrid_planning_ur3e.cpp  motion_planning_pipeline_ur3e.cpp  move_ur3e_joint_goal.cpp  moving_ur3e.cpp  moving_ur3e_box.cpp  moving_ur3e_box_constrained.cpp  moving_ur3e_box_constrained_curvedTube.cpp  moving_ur3e_box_constrained_cylinder.cpp  moving_ur3e_box_constrained_plane.cpp  moving_ur3e_box_constrained_realEnvironment.cpp  moving_ur3e_box_constrained_stl.cpp  moving_ur3e_box_constrained_tube.cpp  moving_ur3e_joint_goal.cpp  moving_ur3e_realEnvironment.cpp
test_ur3e/: CMakeLists.txt  hybrid_planning_ur3e_node.cpp
test_ur3e/config/: global_planner.yaml  local_planner.yaml
test_ur3e/launch/: hybrid_planning_ur3e.launch.py  hybrid_planning_ur3e_demo.launch.py
ur3e_hslu/: CMakeLists.txt  package.xml
ur3e_hslu/launch/: display.launch  gazebo.launch
ur3e_hslu/meshes/: base_link.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL
ur3e_hslu/urdf/: ur3e_hslu.csv  ur3e_hslu.urdf
ur3e_moveit_config/config/: constraints.yaml  demo_ur3e.yaml  demo_ur3e_all_planners.yaml  demo_ur3e_all_planners_constraint.yaml  demo_ur3e_all_planners_obstacles.yaml  demo_ur3e_all_planners_obstacles_cylinders.yaml  stomp_planning.yaml
ur3e_moveit_config/default_warehouse_mongo_db/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-10--5935557922046835459.wt  collection-10-1968011668855940982.wt  collection-13--5935557922046835459.wt  collection-13-1968011668855940982.wt  collection-16--5935557922046835459.wt  collection-16-1968011668855940982.wt  collection-18--5935557922046835459.wt  collection-18-1968011668855940982.wt  collection-2--5935557922046835459.wt  collection-2-1968011668855940982.wt  collection-24-1968011668855940982.wt  collection-27-1968011668855940982.wt  collection-30-1968011668855940982.wt  collection-33--5935557922046835459.wt  collection-33-1968011668855940982.wt  collection-35--5935557922046835459.wt  collection-38--5935557922046835459.wt  collection-41--5935557922046835459.wt  collection-44--5935557922046835459.wt  collection-44-1968011668855940982.wt  collection-55--5935557922046835459.wt  collection-66--5935557922046835459.wt  collection-7--5935557922046835459.wt  collection-7-1968011668855940982.wt  index-11--5935557922046835459.wt  index-11-1968011668855940982.wt  index-12--5935557922046835459.wt  index-12-1968011668855940982.wt  index-14--5935557922046835459.wt  index-14-1968011668855940982.wt  index-15--5935557922046835459.wt  index-15-1968011668855940982.wt  index-17--5935557922046835459.wt  index-17-1968011668855940982.wt  index-19--5935557922046835459.wt  index-19-1968011668855940982.wt  index-20--5935557922046835459.wt  (+26 more)
ur3e_moveit_config/default_warehouse_mongo_db/diagnostic.data/: metrics.2023-11-18T15-19-32Z-00000  metrics.2023-11-18T15-47-06Z-00000  metrics.2023-11-18T16-04-25Z-00000  metrics.2023-11-18T16-05-31Z-00000  metrics.2023-11-18T16-27-34Z-00000  metrics.2023-11-18T16-40-12Z-00000  metrics.2023-11-24T13-21-04Z-00000  metrics.2023-11-24T16-03-15Z-00000  metrics.2023-11-24T16-41-03Z-00000  metrics.2023-11-24T16-50-35Z-00000  metrics.2023-11-24T16-50-59Z-00000  metrics.2023-11-24T17-06-36Z-00000  metrics.2023-11-24T17-08-16Z-00000  metrics.2023-11-24T17-11-19Z-00000  metrics.2023-11-24T17-16-45Z-00000  metrics.2023-11-24T17-18-43Z-00000  metrics.2023-11-24T17-20-38Z-00000  metrics.2023-11-24T17-21-24Z-00000  metrics.2023-11-24T17-22-17Z-00000  (+13 more)
ur3e_moveit_config/launch/: chomp-stomp_planning_pipeline.launch.xml  demo_ur3e.launch  demo_ur3e_all_planners.launch  demo_ur3e_all_planners_constraint.launch  demo_ur3e_all_planners_obstacle.launch  demo_ur3e_all_planners_obstacle_cylinders.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml.save  ompl_chomp_planning_pipeline.launch  ompl_stomp_planning_pipeline.launch  planning_pipeline.launch  run_benchmark_ompl.launch  stomp_chomp_planning_pipeline.launch  stomp_planning_pipeline.launch.xml
